Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-task-4-service
spec:
  type: NodePort
  selector:
    app: home-task-4
  ports:
    - targetPort: 8080
      port: 80
